src/components/WebexMeeting/WebexMeeting.scss
$C: #{$WEBEX_COMPONENTS_CLASS_PREFIX}-meeting;

.#{$C} {
  min-height: $WEBEX_MEETING_MIN_HEIGHT;
  min-width: $WEBEX_MEETING_MIN_WIDTH;
  color: var(--wxc-text-color);
  background: var(--wxc-primary-background);
  border: var(--wxc-meeting-border);
  box-shadow: var(--wxc-box-shadow);
  padding: 0 1rem;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  position: relative;
  transform: translate(0, 0); // offset parent for modals

  &--roster-only {
    .#{$C}__inner-meeting {
      display: none;
    }
    .#{$C}__member-roster {
      flex: 1;
    }
  }

  .#{$C}__centered {
    margin: auto;
    text-align: center;
  }

  .#{$C}__loading-logo {
    background: var(--wxc-loading-logo) no-repeat center / var(--wxc-loading-logo-size);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  .#{$C}__body {
    flex: 1;
    min-height: 0;

    position: relative;
    display: flex;
    align-items: stretch;
  }

  .#{$C}__inner-meeting {
    flex: 1;
    min-width: 0;
    margin-bottom: 1rem;
  }

  .#{$C}__member-roster {
    width: 22.5rem;
    margin: 0 -1rem 0 0.5rem;
  }

  .#{$C}__control-bar {
    margin-bottom: 1.5rem;
  }

  .#{$C}__media-state-toast {
    position: absolute;
    top: 75%;
    left: 50%;
    transform: translateX(-50%);
    z-index: 5;
    white-space: nowrap;
  }

  .#{$C}__settings {
    width: 75%;
    max-width: 60rem;
    min-width: 25rem;
    height: 75%;
    max-height: 60rem;
    min-height: 25rem;
  }

  .#{$C}__authentication {
    width: 53%;
    max-width: 31.25rem;
    min-width: 20rem;
  }

  .#{$C}__authentication-guest,
  .#{$C}__authentication-host {
    height: 25rem; // reserve space for validation errors
  }

  .#{$C}__logo {
    margin: 1rem 0 0.3125rem 0;
  }
}

